Attended workshop, added javascript site functionality

--- a/members/jderm503/index.html
+++ b/members/jderm503/index.html
@@ -8,14 +8,16 @@
 
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
+    <script src="index.js"></script>
     <h1>Pop!</h1>
     <hr width="100%" color="#E7F6F2">
     <div class="header">
         <p id="counter">pops: 0</p>
     </div>
     <div id="bubble-container">
-        <button class="bubble-button">pop</button>
+        <!-- <button class="bubble-button">pop</button> -->
     </div>
     <p id="controls">press SPACE or toggle to pop a random bubble<br>press ENTER to refresh page</p>
     <div class="footer">
